# forest-carbon-lite

./: .gitignore  LICENSE  README.md  custom_afm_simulator.py  data_matrix_generator.py  desktop.ini  generate_individual_plots_with_sample.py  install.py  main.py  pyproject.toml  quickstart.py  requirements.txt  test_installation.py
configs/base/: climate_current.yaml  climate_paris.yaml  climate_plus2.yaml  climate_plus3.yaml  economics_default.yaml  management_afm_m.yaml  management_i.yaml  management_ir.yaml  management_l.yaml  management_lr.yaml  management_m.yaml  management_mr.yaml  site_AFW.yaml  site_EOF.yaml  site_EOFD.yaml  site_ETOF.yaml  site_ETOFD.yaml
configs/base/template/: climate_piecewise_example.yaml  site_CUSTOM_FOREST.yaml  site_RAINFOREST.yaml
documentation/: CHANGELOG.md  DATA_MATRIX_GUIDE.md  FOREST_PLOT_DATA_COLLECTION_GUIDE.md  PLOT_MATRIX_GUIDE.md  REPRODUCIBILITY_GUIDE.md  SCENARIO_BUILDER_GUIDE.md  VALIDATION_GUIDE.md
forest_carbon/: __init__.py  cli.py
forest_carbon/analysis/: __init__.py  comprehensive.py
forest_carbon/core/: __init__.py  simulator.py  uncertainty_analysis.py
forest_carbon/core/models/: carbon_pools.py  disturbance.py  economics.py  tyf_engine.py
forest_carbon/scenarios/: __init__.py  analyzer.py  builder.py  manager.py  runner.py
forest_carbon/tools/: __init__.py  custom_afm_simulator.py  data_matrix_generator.py  plot_matrix_generator.py
forest_carbon/utils/: climate_adjustments.py  colors.py  config_loader.py  constants.py  guardrails.py  validation.py
forest_carbon/visualization/: __init__.py  plotter.py
reports/: README.md  build_report.py  forest_carbon_analysis_report.tex
