[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forest-carbon-lite"
version = "8.0.0"
description = "A comprehensive Python implementation of a 'FullCAM-lite' forest carbon accounting model"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Forest Carbon Lite Team"}
]
maintainers = [
    {name = "Forest Carbon Lite Team"}
]
keywords = ["forest", "carbon", "climate", "sequestration", "accounting", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Environmental Science",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "scipy>=1.7.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/forest-carbon-lite/forest-carbon-lite"
Documentation = "https://forest-carbon-lite.readthedocs.io/"
Repository = "https://github.com/forest-carbon-lite/forest-carbon-lite.git"
Issues = "https://github.com/forest-carbon-lite/forest-carbon-lite/issues"

[project.scripts]
fcl = "forest_carbon.cli:main"
forest-carbon-lite = "forest_carbon.cli:main"
forest-carbon-simulate = "forest_carbon.cli:simulate_command"
forest-carbon-analyze = "forest_carbon.cli:analyze_command"
forest-carbon-comprehensive = "forest_carbon.cli:comprehensive_command"

[tool.setuptools.packages.find]
where = ["."]
include = ["forest_carbon*"]

[tool.setuptools.package-data]
forest_carbon = ["configs/**/*.yaml", "configs/**/*.yml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=forest_carbon",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

